@@ -1,6 +1,12 @@
 # ChangeLog for net-wireless/gr-osmosdr
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gr-osmosdr/ChangeLog,v 1.19 2013/09/16 16:03:12 zerochaos Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gr-osmosdr/ChangeLog,v 1.20 2014/07/06 21:25:41 zerochaos Exp $
+
+*gr-osmosdr-0.1.1 (06 Jul 2014)
+
+  06 Jul 2014; Rick Farina <zerochaos@gentoo.org> +gr-osmosdr-0.1.1.ebuild,
+  gr-osmosdr-9999.ebuild:
+  version bump
 
 *gr-osmosdr-0.1.0-r2 (16 Sep 2013)
 *gr-osmosdr-0.0.2-r1 (16 Sep 2013)
